# thaime

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  demo_keystrokes.sh  setup_rust.sh  test_basic.sh  test_comprehensive.sh  test_ime_functionality.py  thaime-rust.xml  thaime.xml
python-engine/: README.md  THREE_MODES_README.md  engine.py  factory.py  ibus-engine-thaime  ibus-engine-thaime-python  main.py  setup.sh  test_ime_functionality.py  test_integration.py  test_three_modes.py  thai_keymap.py  thaime-python.xml  thaime.xml
rust-setup/: README_RUST.md  test_comprehensive.sh  thaime-rust.xml
src/: engine.rs  factory.rs  ibus.rs  ibus_old.rs  main.rs
